# poly3d

./: .gitignore  CMakeLists.txt  Makefile  elastic.cpp  elastic.h  getoptPoly3D.cpp  getoptPoly3D.h  getwords.h  infcoeff.cpp  infcoeff.h  matrix.cpp  matrix.h  nr.cpp  nr.h  nrutil.cpp  nrutil.h  pi.h  poly3d.cpp  safetan.cpp  safetan.h
include/: CMakeLists.txt
include/poly3d/: CMakeLists.txt  elastic.h  getoptPoly3D.h  getwords.h  infcoeff.h  matrix.h  nr.h  nrutil.h  pi.h  safetan.h
src/: CMakeLists.txt  elastic.cpp  getoptPoly3D.cpp  getwords.cpp  infcoeff.cpp  matrix.cpp  nr.cpp  nrutil.cpp  poly3d.cpp  safetan.cpp
